blueprint/wp-content/themes/twentytwelve-blueprint/style.css
/* ... */
/* iPads  ----------- */
@media only screen and (min-width : 769px) {
	.menu-topics-container {
		right:210px;
	}
	.menu-toggle.menu-issues {
		display:inline-block;
		font-size:14px;
		font-size:0.875rem;
	}
	.menu-issues.toggled-on:before {
		content:"";
		width: 0;
		height: 0;
		border-style: solid;
		border-width: 15px 20px 0 20px;
		border-color: #f5f5f5 transparent transparent transparent;
		position: absolute;
		top: -32px;
		right: 192px;
	}
	.event span.title:after {
  		border-width: 12px;
  		margin-bottom:-2px;
	}
	.entry-summary p {
		font-size: 1.125rem;
	}
	#searchform label {
		left: 14%;
	}
}

/* Minimum width of 960 pixels. */
@media screen and (min-width: 900px) {
	
	
}

/* Minimum width of 960 pixels. */
@media screen and (min-width: 960px) {
	body {
		background-color: #e6e6e6;
	}
	body .site {
		padding: 0 40px;
		padding: 0 2.857142857rem;
	}
	body.custom-background-empty {
		background-color: #fff;
	}
	body.custom-background-empty .site,
	body.custom-background-white .site {
		padding: 0;
		margin-top: 0;
		margin-bottom: 0;
		box-shadow: none;
	}
	header.site-header {
		margin:0 -2.857142857rem;
	}
	
	.issue {
		margin-top:-240px;
	}
	
	.issue span.title {
		color:#fff;
		margin-top:1.5rem;
		font-size:3rem;
		line-height:3rem;
		width:100%;
		max-width:450px;
	}
}

/* Desktops and Laptops -----*/
@media only screen and (min-width : 1200px) {
	.entry-summary p {
		font-size: 1.125rem;
	}
}

@media screen and (min-width: 1280px) {
	.single-issue .hero-desktop-image, 
	.single-feature .hero-desktop-image, 
	.home .hero-desktop-image {
		display:block;
	}
	
	.single-issue .tablet-image, 
	.single-feature .tablet-image, 
	.home .tablet-image {
		display:none;
	}
	
	.single-issue .header-image-container,
	.single-feature .header-image-container,
	.home .header-image-container {
		height:550px;
	}
}

/* Mobile only ----------*/
@media only screen and (max-width : 768px) {
	.menu-issues-container {
		visibility: hidden;
		height:0;
		padding:0;
	}
}
/* mobile landscape -------- */
@media only screen and ( max-width : 768px ) and ( orientation: landscape ) {
	#search-query {
		width: 77%;	
	}
}
/* =Print
----------------------------------------------- */

@media print {
	body {
		background: none !important;
		color: #000;
		font-size: 10pt;
	}
	footer a[rel=bookmark]:link:after,
	footer a[rel=bookmark]:visited:after {
		content: " [" attr(href) "] "; /* Show URLs */
	}
	a {
		text-decoration: none;
	}
	.entry-content img,
	.comment-content img,
	.author-avatar img,
	img.wp-post-image {
		border-radius: 0;
		box-shadow: none;
	}
	.site {
		clear: both !important;
		display: block !important;
		float: none !important;
		max-width: 100%;
		position: relative !important;
	}
	.site-header {
		margin-bottom: 72px;
		margin-bottom: 5.142857143rem;
		text-align: left;
	}
	.site-header h1 {
		font-size: 21pt;
		line-height: 1;
		text-align: left;
	}
	.site-header h2 {
		color: #000;
		font-size: 10pt;
		text-align: left;
	}
	.site-header h1 a,
	.site-header h2 a {
		color: #000;
	}
	.author-avatar,
	#colophon,
	#respond,
	.commentlist .comment-edit-link,
	.commentlist .reply,
	.entry-header .comments-link,
	.entry-meta .edit-link a,
	.page-link,
	.site-content nav,
	.widget-area,
	img.header-image,
	.main-navigation {
		display: none;
	}
	.wrapper {
		border-top: none;
		box-shadow: none;
	}
	.site-content {
		margin: 0;
		width: auto;
	}
	.archive-header .archive-title,
	.entry-header .entry-title {
		font-size: 21pt;
	}
	footer.entry-meta,
	footer.entry-meta a {
		color: #444;
		font-size: 10pt;
	}
	.author-description {
		float: none;
		width: auto;
	}

	/* Comments */
	.commentlist > li.comment {
		background: none;
		position: relative;
		width: auto;
	}
	.commentlist .avatar {
		height: 39px;
		left: 2.2em;
		top: 2.2em;
		width: 39px;
	}
	.comments-area article header cite,
	.comments-area article header time {
		margin-left: 50px;
		margin-left: 3.57142857rem;
	}
}

